--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3bf143c2",
+   "id": "1c364bf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e75eba1e",
+   "id": "213a477c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "37662f97",
+   "id": "7cecdbd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "127c816a",
+   "id": "8b3bf437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "01a09ab0",
+   "id": "f68129d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "623d021c",
+   "id": "5d5511af",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea75f025",
+   "id": "e5ab0199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "517b291e",
+   "id": "04a05918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,32 +300,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a27e83b0",
+   "execution_count": 15,
+   "id": "8278d5da",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_percentage(df):       \n",
     "    adhd_percentage = (df['ADHD_Indication'].sum() / len(df)) * 100\n",
-    "    return round(adhd_percentage"
+    "    return round(adhd_percentage,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "df5530a6",
+   "execution_count": 17,
+   "id": "d124124b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Possible ADHD: 38.46153846153847%\n"
+      "Possible ADHD: 38.46%\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Possible ADHD: {calculate_percentage(df).fl}%\")"
+    "print(f\"Possible ADHD: {calculate_percentage(df)}%\")"
    ]
   }
  ],
